Primer contrato con situación.

--- a/views/contratos.html
+++ b/views/contratos.html
@@ -18,7 +18,7 @@
         <li>Número de contratos con 0 acciones: <strong>{{ vm.contratosNingunaAccion.length }}</strong></li>
         <li>Número de contratos entre 1 y 3 acciones: <strong>{{ vm.contratosPocasAcciones.length }}</strong></li>
         <li>Número de contratos con más acciones: <strong>{{ vm.contratosMuchasAcciones.length }}</strong></li>
-        <li>Buscar el primer contrato que tenga en ACCIONES "clave": "SITUACIÓN": <strong>{{ vm.primerContrato.length }}</strong></li>
+        <li>Buscar el primer contrato que tenga en ACCIONES "clave": "SITUACIÓN": <strong>{{ vm.primerContrato[0].idColumn }}</strong></li>
         <li>Buscar el último contrato que tenga en ACCIONES "clave": "SITUACIÓN": <strong>{{  }}</strong></li>
         <li>Todas las acciones diferentes: <strong>{{  }}</strong></li>
     </ul>
