Formulario termiando pero no guarda los formatos.

--- a/views/home.html
+++ b/views/home.html
@@ -1,1 +1,57 @@
 <h2>Home</h2>
+
+<style>
+   .card-header a{
+        color:#FFF;
+    }
+</style>
+
+<div class="row pt-3">
+    <div class="col">
+        <div class="card text-white bg-info mb-3" style="max-width: 25rem; height: 15rem;">
+            <div class="card-header text-center bg-secondary">
+                <a class="nav-link" ui-sref="libros" ui-sref-active="active">
+                    <h4><i class="fas fa-book"></i> Libros</h4>
+                </a>
+            </div>
+            <div class="card-body">
+                <p class="card-text">Ejercicio en el que accedemos a una base de datos local mediante un <i><strong>servicio Rest</strong></i> con el que hacemos consultas a la base de datos.</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="col">
+        <div class="card text-white bg-info mb-3" style="max-width: 25rem; height: 15rem;">
+            <div class="card-header text-center  bg-secondary">
+                <a class="nav-link" ui-sref="contratos" ui-sref-active="active">
+                    <h4><i class="fas fa-filter"></i> Filter, Map & Reduce</h4>
+                </a>
+            </div>
+            <div class="card-body">
+                <p class="card-text">Ejercicio en el que hemos utilizado los filtros <i><strong>filter</strong></i>, <i><strong>map</strong></i> y <i><strong>reduce</strong></i> contra un <i><strong>json</strong></i> de contratos.</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="col">
+        <div class="card text-white bg-info mb-3" style="max-width: 25rem; height: 15rem;">
+            <div class="card-header text-center bg-secondary">
+                <a class="nav-link" ui-sref="leeme" ui-sref-active="active">
+                    <h4><i class="fas fa-book-reader"></i> Léeme</h4>
+                </a>
+            </div>
+            <div class="card-body">
+                <p class="card-text">En este apartado se podrá consultar un fichero en el que se pondrá la documentación e información de la aplicación.</p>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+
+
+
+
+
+
