--- a/views/navbar.html
+++ b/views/navbar.html
@@ -1,6 +1,48 @@
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+            <a class="navbar-brand" href="#">BiblioEder</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse"
+                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+              
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" ui-sref="home" ui-sref-active="active">
+                            <i class="fas fa-house-damage pr-2 pl-2"></i>
+                            Inicio
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" ui-sref="libros" ui-sref-active="active">
+                            <i class="fas fa-book pr-2 pl-2"></i>
+                            Libros
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" ui-sref="contratos" ui-sref-active="active">
+                            <i class="fas fa-filter pr-2 pl-2"></i>
+                            Filter, Map & Reduce
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" ui-sref="leeme" ui-sref-active="active">
+                            <i class="fas fa-book-reader pr-2 pl-2"></i>
+                            Léeme
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div> 
+    </nav>
+<!--
 <nav class="nav bg-dark p-2">
     <a ui-sref="home" ui-sref-active="active" class="pr-5">Home</a>
     <a ui-sref="leeme" ui-sref-active="active" class="pr-5">Leeme</a>
     <a ui-sref="contratos" ui-sref-active="active">Filter, Map & Reduce</a>
     <a ui-sref="libros" ui-sref-active="active">Libros</a>
 </nav>
+
+-->
