--- a/views/libros.html
+++ b/views/libros.html
@@ -5,7 +5,7 @@
 
 <div class="row">
     <div class="col-8">
-        <table class="table table-striped table-dark">
+        <table class="table table-striped table-secondary">
             <thead>
                 <tr>
                 <th scope="col" ng-click="campo='id';orden=!orden">Id</th>
@@ -63,95 +63,84 @@
 
     <div class="col-4">
         <h3>{{ vm.tituloseccion }}</h3>
-        
 
-        <form name="formulario" ng-submit="vm.guardarLibro()" novalidate>
+        <!-- Formulario -->
+            <h2>Formulario</h2>
+            <form name="formulario" ng-submit="vm.guardarLibro()" novalidate>
 
-            <div class="form-group row">
-                <div class="col-3 text-right">
-                    <label for="isbn">I.S.B.N.:</label>    
-                </div>
-                <div class="col-9">
-                    <input type="text" class="form-control" name="isbn" ng-model="vm.libroFormulario.isbn"
-                        required minlength="5" maxlength="20" placeholder="I.S.B.N. del libro">
-                </div> 
-            </div> <!-- isbn -->
-
-            <div class="form-group row">
-                <div class="col-3 text-right">
-                    <label for="title">Titulo:</label>
-                </div>
-                <div class="col-9">
-                    <input type="text" class="form-control" name="title" ng-model="vm.libroFormulario.titulo"
-                        required minlength="2" maxlength="150" placeholder="Título del libro">
-                </div> 
-            </div> <!-- titulo -->
-
-            <div class="form-group row">
-                <div class="col-3 text-right">
-                    <label for="autor">Autor:</label>
-                </div>
-                <div class="col-9">
-                    <input type="text" class="form-control"  ng-model="vm.libroFormulario.autor"  name="autor" placeholder="Autor del libro">
-                </div>
-            </div> <!-- autor -->
-
-            <div class="form-group row">
-                <div class="col-3 text-right">
-                    <label for="paginas">Páginas:</label>
-                </div>
-                <div class="col-9">
-                    <input type="number" class="form-control" ng-model="vm.libroFormulario.paginas"
-                        name="paginas" placeholder="Número de paginas del libro"
-                        min="0" max="5000">
-                </div>
-            </div> <!-- paginas -->
-
-            <div class="form-group row">
-                <div class="col-3 text-right">
-                    <label for="formato">Formato:</label>
-                </div>
-                <div class="col-9">
-
-                    <div class="input-group">
-                        <div class="input-group-prepend">
-                            <div class="input-group-text">
-                                <input type="radio" aria-label="Radio button for following text input" name="digital"
-                                        ng-checked="vm.libroFormulario.digital" ng-click="ocultar=true">
-                                <label class="form-check-label" for="digital">Digital</label>
-                            </div>
-                            <div class="input-group-text">
-                                <input type="radio" aria-label="Radio button for following text input" name="papel"
-                                        ng-checked="!vm.libroFormulario.digital" ng-click="ocultar=false">
-                                <label class="form-check-label" for="papel">Físico</label>
-                            </div>
-                        </div>
-                        <input type="text" class="form-control" aria-label="Text input with radio button">
+                <div class="form-group row">
+                    <div class="col-3 text-right">
+                        <label for="isbn">I.S.B.N.:</label>    
                     </div>
-                </div>
-            </div> <!-- formato -->
+                    <div class="col-9">
+                        <input type="text" class="form-control" id="isbn" required
+                                ng-model="vm.libroFormulario.isbn" placeholder="I.S.B.N. del libro."> 
+                    </div> 
+                </div> <!-- isbn -->
 
-            <div class="form-group row" ng-if="vm.libroFormulario.digital || ocultar">
-                <div class="col-3 text-right">
-                    <label for="formato">Tipos de formato:</label>
-                </div>
-                <!-- https://stackoverflow.com/questions/41038686/how-to-get-the-values-of-multiple-checkboxes-in-angularjs -->
-                <div class="col-9">
-                    <div class="input-group-prepend row">
-                        <div class="input-group-text" ng-repeat="formato in vm.formatos">
-                            <input type="checkbox" id="{{formato}}" ng-model="vm.formatosSeleccionados[formato]">
-                            <label class="form-check-label" for="{{formato}}">{{ formato }}</label>
-                        </div>
+                <div class="form-group row">
+                    <div class="col-3 text-right">
+                        <label for="isbn">Título:</label>    
                     </div>
-                </div>
-            </div> <!-- tipos de formato -->
+                    <div class="col-9">
+                        <input type="text" class="form-control" id="titulo" minlength="5" maxlength="100" required
+                                ng-model="vm.libroFormulario.titulo" placeholder="Título del libro."> 
+                    </div> 
+                </div> <!-- titulo -->
 
-            <input type="submit" value="{{(vm.libroFormulario)?'Modificar Libro':'Crear Libro'}}" class="btn btn-info" ng-disabled="formulario.$invalid || formulario.$pristine">
-     </form>
-     
+                <div class="form-group row">
+                    <div class="col-3 text-right">
+                        <label for="isbn">Autor:</label>    
+                    </div>
+                    <div class="col-9">
+                        <input type="text" class="form-control" id="autor" minlength="5" maxlength="75" required
+                                ng-model="vm.libroFormulario.autor" placeholder="Autor del libro."> 
+                    </div> 
+                </div> <!-- autor -->
 
+                <div class="form-group row">
+                    <div class="col-3 text-right">
+                        <label for="isbn">Páginas:</label>    
+                    </div>
+                    <div class="col-9">
+                        <input type="number" class="form-control" id="numeroPag" min="0" max="3031" required
+                                ng-model="vm.libroFormulario.numeroPaginas" placeholder="Número de páginas del libro.">  
+                    </div> 
+                </div> <!-- paginas -->
 
+                <div class="form-group row">
+                    <div class="col-3 text-right">
+                        <label for="isbn">Formato:</label>    
+                    </div>
+                    <div class="col-9">
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" name="digital" id="papel"
+                                    ng-model="vm.libroFormulario.digital" ng-checked="!vm.libroFormulario.digital" value="false">
+                            <label class="form-check-label" for="papel">Papel</label>
+                        </div>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" name="digital" id="digital"
+                                    ng-model="vm.libroFormulario.digital" ng-checked="vm.libroFormulario.digital" value="true">
+                            <label class="form-check-label" for="digital">Digital</label>
+                        </div>
+                    </div> 
+                </div> <!-- formato -->
 
+                <div class="form-group row" ng-if="vm.libroFormulario.digital">
+                    <div class="col-3 text-right">
+                        <label for="isbn">Formatos:</label>    
+                    </div>
+                    <div class="col-9">
+                        <div class="form-check form-check-inline" ng-repeat="formato in vm.formatos">
+                            <input class="form-check-input" type="checkbox" id="{{formato}}" name="{{formato}}"
+                                    ng-true-value="'{{formato}}'" ng-model="vm.libroFormulario.formatos[formato]" ng-checked="vm.libroFormulario.formatos[$index]">
+                            <label class="form-check-label" for="{{formato}}">{{formato}}</label>
+                        </div>
+                    </div> 
+                </div> <!-- tipos de formato -->
+
+                <input type="submit" value="{{(vm.libroFormulario)?'Modificar Libro':'Crear Libro'}}" class="btn btn-info"
+                        ng-disabled="formulario.$invalid || formulario.$pristine">
+            </form>
     </div> <!-- col formulario -->
-
 </div> <!-- row -->
